IE Fixes, Floating / Overlap issues

--- a/app/assets/stylesheets/amsterdam.scss
+++ b/app/assets/stylesheets/amsterdam.scss
@@ -149,14 +149,25 @@ $padding-slider: 16px;
 }
 .homeHeroBackgroundOffset{
   transform:translateX(60%);
-  @include breakpoint(s) {
-    transform:translateX(50%);
-  }
   @include breakpoint(l) {
     transform:translateX(36%);
   }
 }
 
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+     /* IE10+ CSS styles go here */
+     .d-none-ie{
+       display:none!important;
+     }
+     .homeHeroPhone{
+       padding-top:10%;
+       max-width:24rem;
+       img{
+         transform:rotate(5deg);
+       }
+     }
+
+}
 
 // EXPERIMENTAL STYLES
 .bg-gradient-canvas-blue-dark-blue{
